# codex-box

./: .gitignore  AGENTS.md  PRD.md  PRD.v0.2-archived-20260625.md  README.md  implementation_plan.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/architecture/: v0.2-archived-20260625.md  v0.3-BYOK.md  v0.3.1-BYOK-proxy.md  v0.3.2-conversation-provider.md  v0.3.3-module-conflict-audit.md
docs/data-model/: v0.1.md  v0.2-archived-20260625.md  v0.3-BYOK.md
docs/decisions/: 0001-字体方案.md  0002-provider-profile-adapter-边界.md  0003-中文字体回退系统字体.md  0004-OpenCodex-能力复现策略.md  0004-OpenCodex-能力复现策略.superseded-20260625.md  0005-BYOK-模型下拉与多-provider-路由.md  0006-本地代理-runtime.md  0007-BYOK-Provider-分层与当前生效链路.md  0008-CodexBox-配置命名空间与第三方导入.md
docs/design/: v0.1.md  v0.2-BYOK-user-flow.md  v0.3-config-import-redesign.md
docs/references/: aitabby-opencodex.md  opencodex-technical-notes.archived-ryensx-20260625.md  opencodex-technical-notes.md
docs/superpowers/plans/: 2026-06-24-codex-box-milestone-0.md  2026-06-26-provider-routing-repair.md
docs/superpowers/specs/: 2026-06-24-codex-box-milestone-0-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: codex_desktop.rs  config_snapshot.rs  config_write.rs  conversation_provider.rs  dashboard.rs  effective_routing.rs  history.rs  mod.rs  opencodex.rs  proxy.rs  system.rs
src-tauri/src/config/: backup.rs  diff.rs  loader.rs  mod.rs  model.rs  parser.rs  writer.rs
src-tauri/src/proxy/: health.rs  inject_map.rs  lifecycle.rs  mod.rs  models_endpoint.rs  responses_ws.rs  routing.rs  server.rs  state.rs  upstream.rs  vision_bridge.rs
src-tauri/tests/fixtures/: minimal.toml  with_marketplace.toml  with_mcp.toml
src/components/: MetricCard.tsx  Sidebar.tsx
src/lib/: api.ts  i18n.ts  mock-data.ts  page-contract.json  types.ts  window-drag.ts
src/locales/: en.json  zh.json
src/pages/: Dashboard.tsx  WorkspacePages.tsx
src/store/: dashboard.ts  ui.ts
src/styles/: fonts.css
tests/: page-contract.test.mjs
