[package]
name = "codex-box"
version = "0.1.0"
description = "Codex Box - Local config & gateway manager for OpenAI Codex"
authors = ["Codex Box"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codex_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
similar = "2"
dirs = "5"
tokio = { version = "1", features = ["fs", "io-util"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
