[package]
name = "codex-box"
version = "0.1.0"
description = "Codex Box - Local config & gateway manager for OpenAI Codex"
authors = ["Codex Box"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codex_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
similar = "2"
dirs = "5"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync", "time", "net"] }
uuid = { version = "1", features = ["v4"] }

# Codex Box 本地代理 runtime (BYOK 真链路)
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.24"
